working on http download
