# apps/server/docs/openapi.json
@@ -12,28 +12,170 @@
             "type": "string"
           },
           "DownloadedBytes": { "format": "int64", "type": "integer" },
-          "Finished": { "type": "boolean" },
-          "Name": { "type": "string" },
-          "PartCount": { "format": "int32", "type": "integer" },
-          "PartProcess": {
-            "items": { "$ref": "#/components/schemas/PartProgress" },
-            "type": "array"
-          },
-          "Path": { "type": "string" },
+          "PartCount": { "format": "int64", "type": "integer" },
+          "PartLength": { "format": "int64", "type": "integer" },
           "QueueNumber": { "format": "int64", "type": "integer" },
           "TotalSize": { "format": "int64", "type": "integer" },
-          "Url": { "type": "string" }
+          "createdAt": { "format": "date-time", "type": "string" },
+          "finishedAt": { "format": "date-time", "type": "string" },
+          "id": { "format": "int64", "type": "integer" },
+          "name": { "type": "string" },
+          "parts": {
+            "items": { "$ref": "#/components/schemas/DownloadPart" },
+            "type": "array"
+          },
+          "path": { "type": "string" },
+          "startedAt": { "format": "date-time", "type": "string" },
+          "status": { "format": "int64", "type": "integer" },
+          "timeActive": { "format": "int64", "type": "integer" },
+          "url": { "type": "string" }
         },
         "required": [
-          "PartProcess",
-          "Name",
-          "Path",
+          "id",
+          "createdAt",
+          "startedAt",
+          "timeActive",
+          "finishedAt",
+          "status",
+          "name",
+          "path",
           "PartCount",
-          "Url",
+          "PartLength",
           "TotalSize",
           "DownloadedBytes",
-          "Finished",
+          "parts",
+          "url",
           "QueueNumber"
+        ],
+        "type": "object"
+      },
+      "DownloadActionReqBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "http://localhost:9999/api/schemas/DownloadActionReqBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "ids": {
+            "items": { "format": "int64", "type": "integer" },
+            "type": "array"
+          }
+        },
+        "required": ["ids"],
+        "type": "object"
+      },
+      "DownloadActionResBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "http://localhost:9999/api/schemas/DownloadActionResBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "success": { "type": "boolean" }
+        },
+        "required": ["success"],
+        "type": "object"
+      },
+      "DownloadMeta": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": ["http://localhost:9999/api/schemas/DownloadMeta.json"],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "fileName": { "type": "string" },
+          "fileType": { "type": "string" },
+          "isRangeAllowed": { "type": "boolean" },
+          "totalSize": { "format": "int64", "type": "integer" },
+          "url": { "type": "string" }
+        },
+        "required": [
+          "totalSize",
+          "url",
+          "fileName",
+          "fileType",
+          "isRangeAllowed"
+        ],
+        "type": "object"
+      },
+      "DownloadPart": {
+        "additionalProperties": false,
+        "properties": {
+          "createdAt": { "format": "date-time", "type": "string" },
+          "downloadedBytes": { "format": "int64", "type": "integer" },
+          "endByteIndex": { "format": "int64", "type": "integer" },
+          "finishedAt": { "format": "date-time", "type": "string" },
+          "partIndex": { "format": "int64", "type": "integer" },
+          "partLength": { "format": "int64", "type": "integer" },
+          "startByteIndex": { "format": "int64", "type": "integer" },
+          "startedAt": { "format": "date-time", "type": "string" },
+          "status": { "format": "int64", "type": "integer" },
+          "timeActive": { "format": "int64", "type": "integer" }
+        },
+        "required": [
+          "createdAt",
+          "startedAt",
+          "timeActive",
+          "finishedAt",
+          "status",
+          "partIndex",
+          "startByteIndex",
+          "endByteIndex",
+          "partLength",
+          "downloadedBytes"
+        ],
+        "type": "object"
+      },
+      "DownloadReqBody": {
+        "additionalProperties": false,
+        "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "http://localhost:9999/api/schemas/DownloadReqBody.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
+          "addTopOfQueue": { "type": "boolean" },
+          "category": { "type": "string" },
+          "contentLayout": {
+            "enum": ["Original", "Create subfolder", "Don't create subfolder"],
+            "type": "string"
+          },
+          "description": { "type": "string" },
+          "incompleteSavePath": { "type": "string" },
+          "isIncompleteSavePathEnabled": { "type": "boolean" },
+          "savePath": { "type": "string" },
+          "startDownload": { "type": "boolean" },
+          "tags": { "items": { "type": "string" }, "type": "array" },
+          "url": { "minLength": 1, "type": "string" }
+        },
+        "required": [
+          "url",
+          "category",
+          "savePath",
+          "isIncompleteSavePathEnabled",
+          "incompleteSavePath",
+          "contentLayout",
+          "tags",
+          "description",
+          "startDownload",
+          "addTopOfQueue"
         ],
         "type": "object"
       },
@@ -141,13 +283,13 @@
         },
         "type": "object"
       },
-      "GetDownloadFileInfoReqBody": {
+      "GetDownloadMetaReqBody": {
         "additionalProperties": false,
         "properties": {
           "$schema": {
             "description": "A URL to the JSON Schema for this object.",
             "examples": [
-              "http://localhost:9999/api/schemas/GetDownloadFileInfoReqBody.json"
+              "http://localhost:9999/api/schemas/GetDownloadMetaReqBody.json"
             ],
             "format": "uri",
             "readOnly": true,
@@ -193,17 +335,6 @@
           }
         },
         "required": ["torrents"],
-        "type": "object"
-      },
-      "PartProgress": {
-        "additionalProperties": false,
-        "properties": {
-          "Buffer": { "contentEncoding": "base64", "type": "string" },
-          "EndByteIndex": { "format": "int32", "type": "integer" },
-          "PartId": { "format": "int32", "type": "integer" },
-          "StartByteIndex": { "format": "int32", "type": "integer" }
-        },
-        "required": ["PartId", "StartByteIndex", "EndByteIndex", "Buffer"],
         "type": "object"
       },
       "Peer": {
@@ -447,15 +578,38 @@
   "info": { "title": "Downite API", "version": "0.0.1" },
   "openapi": "3.1.0",
   "paths": {
-    "/download/meta": {
+    "/download": {
+      "get": {
+        "operationId": "get-downloads",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": { "$ref": "#/components/schemas/Download" },
+                  "type": "array"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Get all downloads"
+      },
       "post": {
-        "operationId": "get-download-meta",
+        "operationId": "download",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/GetDownloadFileInfoReqBody"
-              }
+              "schema": { "$ref": "#/components/schemas/DownloadReqBody" }
             }
           },
           "required": true
@@ -478,7 +632,201 @@
             "description": "Error"
           }
         },
+        "summary": "Download with url"
+      }
+    },
+    "/download/delete": {
+      "post": {
+        "operationId": "delete-download-with-files",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/DownloadActionReqBody" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DownloadActionResBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Delete download with files"
+      }
+    },
+    "/download/meta": {
+      "post": {
+        "operationId": "get-download-meta",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetDownloadMetaReqBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/DownloadMeta" }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
         "summary": "Get meta data of download"
+      }
+    },
+    "/download/pause": {
+      "post": {
+        "operationId": "pause-download",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/DownloadActionReqBody" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DownloadActionResBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Pause download"
+      }
+    },
+    "/download/remove": {
+      "post": {
+        "operationId": "remove-download",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/DownloadActionReqBody" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DownloadActionResBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Remove download"
+      }
+    },
+    "/download/resume": {
+      "post": {
+        "operationId": "resume-download",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/DownloadActionReqBody" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DownloadActionResBody"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Resume download"
+      }
+    },
+    "/download/{id}": {
+      "get": {
+        "operationId": "get-download",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/Download" }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": { "$ref": "#/components/schemas/ErrorModel" }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Get download"
       }
     },
     "/meta/file": {
